--- a/Backend/Microservices/Expense/EMS.API/EMS.API.csproj
+++ b/Backend/Microservices/Expense/EMS.API/EMS.API.csproj
@@ -22,4 +22,8 @@
     <ContainerPort Include="8081" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
