--- a/Backend/Microservices/Expense/EMS.Core/EMS.Core.csproj
+++ b/Backend/Microservices/Expense/EMS.Core/EMS.Core.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Enums\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Exceptions\" />
+    <Folder Include="Specifications\" />
+    <Folder Include="ValueObjects\" />
+  </ItemGroup>
+
 </Project>
