--- a/Backend/Microservices/Expense/EMS.API/appsettings.json
+++ b/Backend/Microservices/Expense/EMS.API/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "Host=localhost;Port=5432;Database=ems;Username=postgres;Password=1234"
+  },
+  "JwtSettings": {
+    "SecretKey": "your-very-long-secret-key-at-least-256-bits",
+    "Issuer": "your-app",
+    "Audience": "your-app",
+    "TokenExpirationInMinutes": 60,
+    "RefreshTokenExpirationInDays": 7
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
