--- a/Backend/Microservices/Expense/EMS.Application/EMS.Application.csproj
+++ b/Backend/Microservices/Expense/EMS.Application/EMS.Application.csproj
@@ -6,4 +6,28 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EMS.Core\EMS.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Common\Behaviors\" />
+    <Folder Include="Common\Interfaces\" />
+    <Folder Include="Common\Exceptions\" />
+    <Folder Include="Common\Extensions\" />
+    <Folder Include="Common\Mappings\" />
+    <Folder Include="Common\DTOs\" />
+    <Folder Include="Common\Models\" />
+    <Folder Include="Common\Validators\" />
+    <Folder Include="Common\Utils\" />
+    <Folder Include="Features\Auth\Commands\" />
+    <Folder Include="Features\Auth\Queries\" />
+    <Folder Include="Features\Transaction\Commands\" />
+    <Folder Include="Features\Transaction\Queries\" />
+  </ItemGroup>
+
 </Project>
