--- a/Backend/Microservices/Expense/EMS.Application/EMS.Application.csproj
+++ b/Backend/Microservices/Expense/EMS.Application/EMS.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.13" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.2" />
   </ItemGroup>
 
@@ -15,13 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Common\Behaviors\" />
-    <Folder Include="Common\Interfaces\" />
-    <Folder Include="Common\Exceptions\" />
-    <Folder Include="Common\Extensions\" />
     <Folder Include="Common\Mappings\" />
     <Folder Include="Common\DTOs\" />
-    <Folder Include="Common\Models\" />
     <Folder Include="Common\Validators\" />
     <Folder Include="Common\Utils\" />
     <Folder Include="Features\Auth\Commands\" />
