--- a/Backend/Microservices/Expense/EMS.API/appsettings.json
+++ b/Backend/Microservices/Expense/EMS.API/appsettings.json
@@ -9,6 +9,27 @@
     "TokenExpirationInMinutes": 60,
     "RefreshTokenExpirationInDays": 7
   },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.AspNetCore.Hosting.Diagnostics": "Error",
+        "Microsoft.Hosting.Lifetime": "Information"
+        //"Microsoft.EntityFrameworkCore.Database.Command": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "..\\Log\\log.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
