change serlog configs and jwt settings

--- a/Backend/Microservices/Expense/EMS.API/appsettings.json
+++ b/Backend/Microservices/Expense/EMS.API/appsettings.json
@@ -3,9 +3,9 @@
     "ConnectionString": "Host=localhost;Port=5432;Database=ems;Username=postgres;Password=1234"
   },
   "JwtSettings": {
-    "SecretKey": "your-very-long-secret-key-at-least-256-bits",
-    "Issuer": "your-app",
-    "Audience": "your-app",
+    "SecretKey": "CYOZ88Fc3h2StOb0MPMwEiuOQuEvK2Ih",
+    "Issuer": "EMS",
+    "Audience": "EMS-Client",
     "TokenExpirationInMinutes": 60,
     "RefreshTokenExpirationInDays": 7
   },
