add example env file

--- a/Clients/mobile/expense_management_system/.gitignore
+++ b/Clients/mobile/expense_management_system/.gitignore
@@ -55,7 +55,9 @@ linked_*.ds
 unlinked.ds
 unlinked_spec.ds
 .fvm/
-assets/env/
+assets/env/.env*
+!assets/env/.env.example
+
 
 
 # Android related
