update sign in & sign up screen

--- a/Clients/mobile/expense_management_system/pubspec.yaml
+++ b/Clients/mobile/expense_management_system/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.0
   uuid: ^3.0.7
+  extended_text_field: ^16.0.2
 
 dev_dependencies:
   flutter_test:
@@ -76,8 +77,6 @@ flutter:
     - assets/env/.env.development
     - assets/env/
     - assets/fonts/
-    - assets/
-    #- assets/image/
   fonts:
     - family: Nunito
       fonts:
