--- a/Backend/Microservices/Expense/EMS.API/appsettings.json
+++ b/Backend/Microservices/Expense/EMS.API/appsettings.json
@@ -9,6 +9,12 @@
     "AccessTokenExpirationInMinutes": 60,
     "RefreshTokenExpirationInDays": 7
   },
+  "Redis": {
+    "ConnectionString": "your-redis-connection-string",
+    "InstanceName": "instance-name",
+    "DefaultExpiryTimeInMinutes": 60,
+    "EnableLogging": true
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
