add Redis cache
- Add Redis cache
- Add a health check for Redis cache

--- a/Backend/Microservices/Expense/EMS.API/appsettings.json
+++ b/Backend/Microservices/Expense/EMS.API/appsettings.json
@@ -10,8 +10,8 @@
     "RefreshTokenExpirationInDays": 7
   },
   "Redis": {
-    "ConnectionString": "your-redis-connection-string",
-    "InstanceName": "instance-name",
+    "ConnectionString": "localhost:6379",
+    "InstanceName": "ems-cache",
     "DefaultExpiryTimeInMinutes": 60,
     "EnableLogging": true
   },
