--- a/Clients/mobile/expense_management_system/pubspec.yaml
+++ b/Clients/mobile/expense_management_system/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   json_annotation: ^4.8.0
   uuid: ^3.0.7
   extended_text_field: ^16.0.2
+  currency_text_input_formatter: ^2.2.9
 
 dev_dependencies:
   flutter_test:
