--- a/Backend/Microservices/Expense/EMS.Application/EMS.Application.csproj
+++ b/Backend/Microservices/Expense/EMS.Application/EMS.Application.csproj
@@ -21,8 +21,7 @@
   <ItemGroup>
     <Folder Include="Common\DTOs\" />
     <Folder Include="Common\Validators\" />
-    <Folder Include="Features\Transaction\Commands\" />
-    <Folder Include="Features\Transaction\Queries\" />
+    <Folder Include="Features\Transactions\Queries\" />
     <Folder Include="Features\Wallet\Commands\CreateWallet\" />
     <Folder Include="Features\Wallet\Commands\UpdateWallet\" />
   </ItemGroup>
