--- a/Clients/mobile/expense_management_system/pubspec.yaml
+++ b/Clients/mobile/expense_management_system/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_boilerplate
-description: A simple boilerplate project
+name: expense_management_system
+description: Expense Management System
 version: 1.0.0+1
 publish_to: none
 
@@ -44,6 +44,7 @@ dev_dependencies:
   import_sorter: ^4.6.0
   very_good_analysis: ^5.1.0
   watcher: ^1.1.0
+  change_app_package_name: ^1.5.0
 
 ## Install derry from https://pub.dev/packages/derry and run derry build, derry watch, derry gen
 scripts: derry.yaml
