add launcher icon

--- a/Clients/mobile/expense_management_system/pubspec.yaml
+++ b/Clients/mobile/expense_management_system/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
     - assets/env/.env.development
     - assets/env/
     - assets/fonts/
+    - assets/images/
   fonts:
     - family: Nunito
       fonts:
