--- a/Backend/Microservices/Expense/EMS.API/appsettings.json
+++ b/Backend/Microservices/Expense/EMS.API/appsettings.json
@@ -15,6 +15,11 @@
     "DefaultExpiryTimeInMinutes": 60,
     "EnableLogging": true
   },
+  "Services": {
+    "Ai": {
+      "BaseUrl": "http://127.0.0.1:8000/api/v1"
+    }
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
