add chat thread controller and fix error: user add transactions on wallet (belongs to other users)

--- a/Backend/Microservices/Expense/EMS.Application/EMS.Application.csproj
+++ b/Backend/Microservices/Expense/EMS.Application/EMS.Application.csproj
@@ -21,7 +21,7 @@
   <ItemGroup>
     <Folder Include="Common\Validators\" />
     <Folder Include="Features\Chats\Assistant\" />
-    <Folder Include="Features\Chats\Finance\Queries\" />
+    <Folder Include="Features\Chats\Commands\" />
   </ItemGroup>
 
 </Project>
