--- a/Clients/mobile/expense_management_system/pubspec.yaml
+++ b/Clients/mobile/expense_management_system/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   go_router_builder: ^2.8.2
   flutter_launcher_icons: ^0.14.3
   intl: ^0.19.0
+  signalr_netcore: ^0.1.7+2-nullsafety.3
 
 dev_dependencies:
   flutter_test:
