--- a/Backend/docker-compose.override.yml
+++ b/Backend/docker-compose.override.yml
@@ -1,13 +1,128 @@
 services:
-  ems.api:
-    container_name: ems.webapi
+  portainer:
+    container_name: portainer
+    restart: always
+    ports:
+      - ${PORTAINER_PORT}:8000
+      - ${PORTAINER_PORT2}:9000
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+  
+  # APP
+  ems-api:
+    container_name: backend-api
+    restart: unless-stopped
+    depends_on:
+      - postgres
+      - redis
+    env_file:
+      - .env
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=80
       - ASPNETCORE_HTTPS_PORTS=443
-    ports:
-      - "80"
-      - "443"
+
+      # Database Configuration
+      - DatabaseSettings__ConnectionString=Host=postgres;Port=${POSTGRES_PORT};Database=${POSTGRES_DBNAME};Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD}
+  
+      # JWT Authentication
+      - JwtSettings__SecretKey=${JWT_SECRET_KEY}
+      - JwtSettings__Issuer=${JWT_ISSUER}
+      - JwtSettings__Audience=${JWT_AUDIENCE}
+      - JwtSettings__AccessTokenExpirationInMinutes=${JWT_ACCESS_TOKEN_EXPIRATION_MINUTES}
+      - JwtSettings__RefreshTokenExpirationInDays=${JWT_REFRESH_TOKEN_EXPIRATION_DAYS}
+  
+      # Cloudinary Storage
+      - Cloudinary__CloudName=${CLOUDINARY_CLOUD_NAME}
+      - Cloudinary__ApiKey=${CLOUDINARY_API_KEY}
+      - Cloudinary__ApiSecret=${CLOUDINARY_API_SECRET}
+      - Cloudinary__FolderPath=${CLOUDINARY_FOLDER_PATH}
+  
+      # Redis Cache Settings
+      - Redis__ConnectionString=redis:${REDIS_PORT}
+      - Redis__InstanceName=${REDIS_INSTANCE_NAME}
+      - Redis__DefaultExpiryTimeInMinutes=${REDIS_DEFAULT_EXPIRY_TIME}
+      - Redis__EnableLogging=${REDIS_ENABLE_LOGGING}
+  
+      # Service URLs
+      - Services__Ai__BaseUrl=${AI_BASEURL}
+  
+      # Logging Configuration
+      - Serilog__MinimumLevel__Default=${SERILOG_MINIMUM_LEVEL_DEFAULT}
     volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
-      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+      - ./Microservices/Expense:/app
+      - /app/bin
+      - /app/obj
+    networks:
+      - app-network
+    ports:
+      - "${BE_PORT}:80"
+      - "${BE_PORT2}:443"
+  
+  # AI Microservice
+  ai-service:
+    container_name: ai-service
+    restart: unless-stopped
+    env_file:
+      - .env
+    environment:
+      # Application settings
+      - PROJECT_NAME=${PROJECT_NAME}
+      - PROJECT_DESCRIPTION=${PROJECT_DESCRIPTION}
+      - VERSION=${VERSION}
+      - DEBUG_MODE=${DEBUG_MODE}
+      - LOG_LEVEL=${LOG_LEVEL}
+      - SERVER_HOST=0.0.0.0
+      - SERVER_PORT=8000
+      - API_V1_STR=${API_V1_STR}
+      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
+  
+      # LLM API Keys
+      - GROQ_API_KEY=${GROQ_API_KEY}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+    volumes:
+      - ./Microservices/AI:/app
+    networks:
+      - app-network
+    ports:
+      - "${AI_PORT}:8000"
+
+  # Databases
+  postgres:
+    container_name: postgres-db
+    restart: unless-stopped
+    env_file:
+      - .env
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DBNAME}
+    volumes:
+      - ./init-scripts:/docker-entrypoint-initdb.d
+      - postgres_data:/data/db
+    networks:
+      - app-network
+    ports:
+      - "${POSTGRES_PORT}:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # Cache
+  redis:
+    container_name: redis-cache
+    restart: unless-stopped
+    command: redis-server --appendonly yes --loglevel verbose
+    volumes:
+      - redis_data:/data/db
+    ports:
+      - "${REDIS_PORT:6379}"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
