--- a/Backend/docker-compose.override.yml
+++ b/Backend/docker-compose.override.yml
@@ -16,12 +16,13 @@ services:
     depends_on:
       - postgres
       - redis
+      - ai-service
     env_file:
       - .env
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=80
-      - ASPNETCORE_HTTPS_PORTS=443
+      # - ASPNETCORE_HTTPS_PORTS=443
 
       # Database Configuration
       - DatabaseSettings__ConnectionString=Host=postgres;Port=${POSTGRES_PORT};Database=${POSTGRES_DBNAME};Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD}
@@ -50,15 +51,11 @@ services:
   
       # Logging Configuration
       - Serilog__MinimumLevel__Default=${SERILOG_MINIMUM_LEVEL_DEFAULT}
-    volumes:
-      - ./Microservices/Expense:/app
-      - /app/bin
-      - /app/obj
     networks:
       - app-network
     ports:
       - "${BE_PORT}:80"
-      - "${BE_PORT2}:443"
+      # - "${BE_PORT2}:443"
   
   # AI Microservice
   ai-service:
@@ -82,8 +79,6 @@ services:
       - GROQ_API_KEY=${GROQ_API_KEY}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
-    volumes:
-      - ./Microservices/AI:/app
     networks:
       - app-network
     ports:
@@ -107,7 +102,7 @@ services:
     ports:
       - "${POSTGRES_PORT}:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -120,7 +115,7 @@ services:
     volumes:
       - redis_data:/data/db
     ports:
-      - "${REDIS_PORT:6379}"
+      - "${REDIS_PORT}:6379"
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
