--- a/Backend/docker-compose.override.yml
+++ b/Backend/docker-compose.override.yml
@@ -14,18 +14,21 @@ services:
     container_name: backend-api
     restart: unless-stopped
     depends_on:
-      - postgres
-      - redis
-      - ai-service
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      ai-service:
+        condition: service_started
     env_file:
       - .env
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_HTTP_PORTS=80
+      - ASPNETCORE_HTTP_PORTS=8080
       # - ASPNETCORE_HTTPS_PORTS=443
 
       # Database Configuration
-      - DatabaseSettings__ConnectionString=Host=postgres;Port=${POSTGRES_PORT};Database=${POSTGRES_DBNAME};Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD}
+      - DatabaseSettings__ConnectionString=Host=postgres;Port=5432;Database=${POSTGRES_DBNAME};Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD}
   
       # JWT Authentication
       - JwtSettings__SecretKey=${JWT_SECRET_KEY}
@@ -41,7 +44,7 @@ services:
       - Cloudinary__FolderPath=${CLOUDINARY_FOLDER_PATH}
   
       # Redis Cache Settings
-      - Redis__ConnectionString=redis:${REDIS_PORT}
+      - Redis__ConnectionString=redis:6379,connectTimeout=15000,syncTimeout=15000,abortConnect=false,allowAdmin=true
       - Redis__InstanceName=${REDIS_INSTANCE_NAME}
       - Redis__DefaultExpiryTimeInMinutes=${REDIS_DEFAULT_EXPIRY_TIME}
       - Redis__EnableLogging=${REDIS_ENABLE_LOGGING}
@@ -54,7 +57,7 @@ services:
     networks:
       - app-network
     ports:
-      - "${BE_PORT}:80"
+      - "${BE_PORT}:8080"
       # - "${BE_PORT2}:443"
   
   # AI Microservice
@@ -111,9 +114,11 @@ services:
   redis:
     container_name: redis-cache
     restart: unless-stopped
-    command: redis-server --appendonly yes --loglevel verbose
+    command: redis-server --appendonly yes --loglevel verbose --protected-mode no --bind 0.0.0.0
     volumes:
       - redis_data:/data/db
+    networks:
+      - app-network
     ports:
       - "${REDIS_PORT}:6379"
     healthcheck:
