--- a/Backend/Microservices/Expense/EMS.API/appsettings.json
+++ b/Backend/Microservices/Expense/EMS.API/appsettings.json
@@ -9,6 +9,12 @@
     "AccessTokenExpirationInMinutes": 60,
     "RefreshTokenExpirationInDays": 7
   },
+  "Cloudinary": {
+    "CloudName": "your-cloud-name",
+    "ApiKey": "your-api-key",
+    "ApiSecret": "your-api-secret",
+    "FolderPath": "expense-manager"
+  },
   "Redis": {
     "ConnectionString": "localhost:6379",
     "InstanceName": "ems-cache",
