add get default category and user preferences endpoint

--- a/Backend/Microservices/Expense/EMS.Application/EMS.Application.csproj
+++ b/Backend/Microservices/Expense/EMS.Application/EMS.Application.csproj
@@ -23,6 +23,7 @@
     <Folder Include="Common\Validators\" />
     <Folder Include="Features\Chats\Assistant\" />
     <Folder Include="Features\Chats\Commands\" />
+    <Folder Include="Features\Preferences\Services\" />
   </ItemGroup>
 
 </Project>
