--- a/Clients/mobile/expense_management_system/pubspec.yaml
+++ b/Clients/mobile/expense_management_system/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   intl: ^0.19.0
   signalr_netcore: ^0.1.7+2-nullsafety.3
+  image_picker: ^1.1.2
+  cached_network_image: ^3.3.1
+  photo_view: ^0.15.0
+  http_parser: ^4.1.2
 
 dev_dependencies:
   flutter_test:
