add text extractor

--- a/Backend/Microservices/AI/.env.example
+++ b/Backend/Microservices/AI/.env.example
@@ -8,8 +8,19 @@ SERVER_HOST=0.0.0.0
 SERVER_PORT=8000
 API_V1_STR="/api/v1"
 ALLOWED_HOSTS=["http://localhost:3000", "https://yourfrontend.com"]
+API_KEY="your-api-key"
 
 # LLM Settings
 GROQ_API_KEY="your_api_key_here"
 OPENAI_API_KEY="your_api_key_here"
 GOOGLE_API_KEY="your_api_key_here"
+
+# Backend
+BACKEND_BASE_URL="http://127.0.0.1:5487/api/v1"
+BACKEND_API_KEY=""
+
+# Redis
+REDIS_URL="120.0.0.1:63789"
+REDIS_PASSWORD=""
+REDIS_TTL=3600
+REDIS_INSTANCE_NAME="ems-cache"
