--- a/Backend/Microservices/Expense/EMS.API/appsettings.json
+++ b/Backend/Microservices/Expense/EMS.API/appsettings.json
@@ -23,7 +23,8 @@
   },
   "Services": {
     "Ai": {
-      "BaseUrl": "http://127.0.0.1:8000/api/v1"
+      "BaseUrl": "http://127.0.0.1:8000/api/v1",
+      "ApiKey": "ai-api-key"
     }
   },
   "Serilog": {
