--- a/Backend/Microservices/AI/.env.example
+++ b/Backend/Microservices/AI/.env.example
@@ -16,7 +16,7 @@ OPENAI_API_KEY="your_api_key_here"
 GOOGLE_API_KEY="your_api_key_here"
 
 # Backend
-BACKEND_BASE_URL="http://127.0.0.1:5487/api/v1"
+BACKEND_BASE_URL="http://127.0.0.1:5487"
 BACKEND_API_KEY=""
 
 # Redis
