--- a/Clients/mobile/expense_management_system/pubspec.yaml
+++ b/Clients/mobile/expense_management_system/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cached_network_image: ^3.3.1
   photo_view: ^0.15.0
   http_parser: ^4.1.2
+  record: ^6.0.0
+  path_provider: ^2.1.5
+  audioplayers: ^6.4.0
 
 dev_dependencies:
   flutter_test:
