add lifespan for ai service and make log path can be set dynamically in .evn file

--- a/Backend/Microservices/AI/.env.example
+++ b/Backend/Microservices/AI/.env.example
@@ -4,6 +4,7 @@ PROJECT_DESCRIPTION="FastAPI server for multi-provider LLM integration with RAG 
 VERSION="0.1.0"
 DEBUG_MODE=True
 LOG_LEVEL=INFO
+LOG_PATH="logs"
 SERVER_HOST=0.0.0.0
 SERVER_PORT=8000
 API_V1_STR="/api/v1"
