--- a/Backend/docker-compose.override.yml
+++ b/Backend/docker-compose.override.yml
@@ -77,6 +77,7 @@ services:
       - VERSION=${VERSION}
       - DEBUG_MODE=${DEBUG_MODE}
       - LOG_LEVEL=${LOG_LEVEL}
+      - LOG_PATH=${LOG_PATH}
       - SERVER_HOST=0.0.0.0
       - SERVER_PORT=8000
       - API_V1_STR=${API_V1_STR}
