--- a/Backend/Microservices/AI/.env.example
+++ b/Backend/Microservices/AI/.env.example
@@ -21,7 +21,7 @@ BACKEND_BASE_URL="http://127.0.0.1:5487"
 BACKEND_API_KEY=""
 
 # Redis
-REDIS_URL="120.0.0.1:63789"
+REDIS_URL="redis://120.0.0.1:63789"
 REDIS_PASSWORD=""
 REDIS_TTL=3600
 REDIS_INSTANCE_NAME="ems-cache"
