add api key authentication for backend

--- a/Backend/Microservices/AI/.env.example
+++ b/Backend/Microservices/AI/.env.example
@@ -18,7 +18,7 @@ GOOGLE_API_KEY="your_api_key_here"
 
 # Backend
 BACKEND_BASE_URL="http://127.0.0.1:5487"
-BACKEND_API_KEY=""
+BACKEND_API_KEY="your-backend-api-key"
 
 # Redis
 REDIS_URL="redis://120.0.0.1:63789"
