--- a/Backend/docker-compose.override.yml
+++ b/Backend/docker-compose.override.yml
@@ -87,8 +87,8 @@ services:
       - BACKEND_API_KEY=${BE_API_KEY}
 
       # Redis
-      - REDIS_URL=redis:6379
-      - REDIS_PASSWORD=123456
+      - REDIS_URL=redis://redis:6379
+      - REDIS_PASSWORD=
       - REDIS_TTL=3600
       - REDIS_INSTANCE_NAME=${REDIS_INSTANCE_NAME}
   
