--- a/Clients/mobile/expense_management_system/pubspec.yaml
+++ b/Clients/mobile/expense_management_system/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   record: ^6.0.0
   path_provider: ^2.1.5
   audioplayers: ^6.4.0
+  devicelocale: ^0.8.1
 
 dev_dependencies:
   flutter_test:
