--- a/Backend/Microservices/AI/.env.example
+++ b/Backend/Microservices/AI/.env.example
@@ -25,3 +25,7 @@ REDIS_URL="redis://120.0.0.1:63789"
 REDIS_PASSWORD=""
 REDIS_TTL=3600
 REDIS_INSTANCE_NAME="ems-cache"
+
+# PostgresSQL
+POSTGRES_URl="postgresql://postgres:postgre@localhost:5432/postgres?sslmode=disable"
+POSTGRES_MAX_POOL_SIZE=20
