--- a/Backend/docker-compose.override.yml
+++ b/Backend/docker-compose.override.yml
@@ -96,6 +96,10 @@ services:
       - GROQ_API_KEY=${GROQ_API_KEY}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+
+      # PostgresSQL
+      - POSTGRES_URl="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DBNAME}?sslmode=disable"
+      - POSTGRES_MAX_POOL_SIZE=20
     volumes:
       - ./Microservices/AI/logs:/app/${AI_LOG_PATH}
     networks:
