--- a/Backend/Microservices/AI/.env.example
+++ b/Backend/Microservices/AI/.env.example
@@ -27,5 +27,5 @@ REDIS_TTL=3600
 REDIS_INSTANCE_NAME="ems-cache"
 
 # PostgresSQL
-POSTGRES_URl="postgresql://postgres:postgre@localhost:5432/postgres?sslmode=disable"
+POSTGRES_URL="postgresql://postgres:postgre@localhost:5432/postgres?sslmode=disable"
 POSTGRES_MAX_POOL_SIZE=20
