--- a/Backend/docker-compose.override.yml
+++ b/Backend/docker-compose.override.yml
@@ -98,7 +98,7 @@ services:
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
 
       # PostgresSQL
-      - POSTGRES_URl="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DBNAME}?sslmode=disable"
+      - POSTGRES_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DBNAME}?sslmode=disable
       - POSTGRES_MAX_POOL_SIZE=20
     volumes:
       - ./Microservices/AI/logs:/app/${AI_LOG_PATH}
