--- a/Clients/mobile/expense_management_system/pubspec.yaml
+++ b/Clients/mobile/expense_management_system/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   path_provider: ^2.1.5
   audioplayers: ^6.4.0
   devicelocale: ^0.8.1
+  local_auth: ^2.3.0
+  local_auth_android: ^1.0.48
+  flutter_markdown: ^0.7.7
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
