--- a/Clients/mobile/expense_management_system/android/app/src/main/AndroidManifest.xml
+++ b/Clients/mobile/expense_management_system/android/app/src/main/AndroidManifest.xml
@@ -2,13 +2,11 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
-    <!-- STORAGE (truy cập thư viện ảnh) -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28"/>
 
-    <!-- Android 13+ -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO"/>
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO"/>
@@ -26,6 +24,14 @@
 
     <!-- BIOMETRIC -->
     <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
+
+    <uses-permission android:name="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"
+                     android:protectionLevel="signature" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.BACKGROUND_SERVICE" />
+    
     <application
         android:label="Mosa"
         android:name="${applicationName}"
