--- a/Backend/Microservices/Expense/EMS.Application/EMS.Application.csproj
+++ b/Backend/Microservices/Expense/EMS.Application/EMS.Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Common\Validators\**" />
+    <EmbeddedResource Remove="Common\Validators\**" />
+    <None Remove="Common\Validators\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
@@ -20,10 +26,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Common\Validators\" />
     <Folder Include="Features\AiTools\Services\" />
-    <Folder Include="Features\Chats\Assistant\" />
-    <Folder Include="Features\Chats\Commands\" />
+    <Folder Include="Features\ExtractedTransactions\Commands\" />
+    <Folder Include="Features\ExtractedTransactions\Dtos\" />
+    <Folder Include="Features\ExtractedTransactions\Services\" />
+    <Folder Include="Features\ExtractedTransactions\Queries\" />
     <Folder Include="Features\Preferences\Services\" />
   </ItemGroup>
 
