--- a/Backend/Microservices/Expense/EMS.API/appsettings.json
+++ b/Backend/Microservices/Expense/EMS.API/appsettings.json
@@ -19,12 +19,19 @@
     "ConnectionString": "localhost:6379",
     "InstanceName": "ems-cache",
     "DefaultExpiryTimeInMinutes": 60,
-    "EnableLogging": true
+    "EnableLogging": true,
+    "MessageQueues": {
+      "NotificationExtractionQueue": "notification-extraction"
+    }
   },
   "Services": {
     "Ai": {
-      "BaseUrl": "http://127.0.0.1:8000/api/v1",
+      "BaseUrl": "http://localhost:8000/api/v1",
       "ApiKey": "ai-api-key"
+    },
+    "Dispatcher": {
+      "BaseUrl": "http://localhost:8081/api/v1",
+      "ApiKey": "your-secret-api-key"
     }
   },
   "Serilog": {
