--- a/Backend/Microservices/Expense/EMS.Application/EMS.Application.csproj
+++ b/Backend/Microservices/Expense/EMS.Application/EMS.Application.csproj
@@ -28,6 +28,7 @@
   <ItemGroup>
     <Folder Include="Features\AiTools\Services\" />
     <Folder Include="Features\ExtractedTransactions\Services\" />
+    <Folder Include="Features\Notifications\Services\" />
     <Folder Include="Features\Preferences\Services\" />
   </ItemGroup>
 
