--- a/Backend/Microservices/Expense/EMS.Infrastructure/EMS.Infrastructure.csproj
+++ b/Backend/Microservices/Expense/EMS.Infrastructure/EMS.Infrastructure.csproj
@@ -23,6 +23,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
+    <PackageReference Include="NRedisStack" Version="0.13.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.0" />
   </ItemGroup>
 
