--- a/Clients/mobile/expense_management_system/pubspec.yaml
+++ b/Clients/mobile/expense_management_system/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   firebase_messaging: ^15.2.5
   flutter_local_notifications: ^19.1.0
   firebase_core: ^3.13.0
+  flutter_background_service: ^5.1.0
+  flutter_background_service_android: ^6.3.0
+  table_calendar: ^3.1.3
 
 dev_dependencies:
   flutter_test:
