--- a/Backend/Microservices/Expense/EMS.API/appsettings.json
+++ b/Backend/Microservices/Expense/EMS.API/appsettings.json
@@ -21,7 +21,8 @@
     "DefaultExpiryTimeInMinutes": 60,
     "EnableLogging": true,
     "MessageQueues": {
-      "NotificationExtractionQueue": "notification-extraction"
+      "NotificationExtractionQueue": "notification-extraction",
+      "EventProcessingQueueName": "event:processing"
     }
   },
   "Services": {
