update appsettings.json and docker compose files

--- a/Backend/docker-compose.override.yml
+++ b/Backend/docker-compose.override.yml
@@ -127,6 +127,9 @@ services:
       - APP_ENV=${GO_DISPATCHER_APP_ENV:-development}
       - APP_PORT=8081
       - APP_API_KEY=${GO_DISPATCHER_API_KEY}
+      - EVENT_POLLING_INTERVAL=${GO_EVENT_POLLING_INTERVAL:-30s}
+      - EVENT_PROCESSING_QUEUE=${GO_EVENT_PROCESSING_QUEUE}
+      - EVENT_BATCH_SIZE=${GO_EVENT_BATCH_SIZE}
 
       # Logging
       - LOG_LEVEL=${GO_DISPATCHER_LOG_LEVEL:-info}
@@ -147,6 +150,10 @@ services:
       - REDIS_ADDR=redis:6379
       - REDIS_PASSWORD=${REDIS_PASSWORD:-}
       - REDIS_DB=${GO_DISPATCHER_REDIS_DB:-0}
+      - REDIS_POOL_SIZE=${REDIS_POOL_SIZE}
+      - REDIS_MIN_IDLE_CONNS=${REDIS_MIN_IDLE_CONNS}
+      - REDIS_POOL_TIMEOUT=${REDIS_POOL_TIMEOUT}
+      - REDIS_IDLE_TIMEOUT=${REDIS_IDLE_TIMEOUT}
 
       # Firebase
       - FIREBASE_SERVICE_ACCOUNT_KEY_PATH=/app/firebase-account-key.json
