--- a/Backend/Microservices/Expense/EMS.API/appsettings.json
+++ b/Backend/Microservices/Expense/EMS.API/appsettings.json
@@ -50,7 +50,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "..\\Log\\log.txt",
+          "path": "..\\logs\\log.txt",
           "rollingInterval": "Day"
         }
       }
