chore(env): update environment variables

--- a/Backend/Microservices/Expense/EMS.API/appsettings.json
+++ b/Backend/Microservices/Expense/EMS.API/appsettings.json
@@ -35,6 +35,11 @@
       "ApiKey": "your-secret-api-key"
     }
   },
+  "AppSettings": {
+    "PasswordResetTokenExpiryMinutes": 5,
+    "MobileResetPasswordUrl": "https://flutter-app.com/reset-password",
+    "GoogleLoginSuccessRedirect": "https://your-flutter-app.com/auth/google/callback"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
