--- a/Clients/mobile/expense_management_system/pubspec.yaml
+++ b/Clients/mobile/expense_management_system/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_background_service: ^5.1.0
   flutter_background_service_android: ^6.3.0
   table_calendar: ^3.1.3
+  fl_chart: ^0.71.0
 
 dev_dependencies:
   flutter_test:
