add external login functionality (google)

--- a/Backend/Microservices/Expense/EMS.API/appsettings.json
+++ b/Backend/Microservices/Expense/EMS.API/appsettings.json
@@ -2,6 +2,12 @@
   "DatabaseSettings": {
     "ConnectionString": "Host=localhost;Port=5432;Database=ems;Username=postgres;Password=123456"
   },
+  "Authentication": {
+    "Google": {
+      "ClientId": "ClientId",
+      "ClientSecret": "ClientSecret"
+    }
+  },
   "JwtSettings": {
     "SecretKey": "iWw3lYeDPrHdpptS1UUBoDO4VveV1eZM",
     "Issuer": "EMS",
