--- a/Backend/docker-compose.override.yml
+++ b/Backend/docker-compose.override.yml
@@ -200,6 +200,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DBNAME}
+      - POSTGRES_INITDB_ARGS=--auth-host=scram-sha-256
     volumes:
       - ./deployment/postgresql/init-scripts:/docker-entrypoint-initdb.d
       - ./deployment/postgresql/postgresql.conf:/etc/postgresql/postgresql.conf
